# AI-powered-calendar-assistant

./: .gitignore  CALENDAR_RANGE_PICKER.md  WEB_SEARCH_SETUP.md  test-confirm-event-issue.md  test-confirmation-format-only.md  test-fixed-confirm-event.md  test-fixed-event-creation-flow.md  test-manchester-arsenal-event.md  test-refined-confirmation-flow.md  test-simplified-web-search-flow.md  test-web-search-button.md  test-web-search-event-flow.md  test-web-search-flow.md  test-web-search.py
apps/backend/: Procfile  README.md  main.py  pyproject.toml  railway.json  test_db.py  test_import.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/v1/: api.py
apps/backend/app/api/v1/endpoints/: __init__.py  chat.py  common.py
apps/backend/app/core/: config.py  database.py
apps/backend/app/models/: __init__.py  account.py  calendar.py  chat.py  session.py  user.py
apps/backend/app/repositories/: __init__.py  account.py  base.py  calendar.py  chat.py  session.py  user.py
apps/backend/app/schemas/: __init__.py  account.py  calendar.py  chat.py  common.py  session.py  user.py
apps/backend/app/services/: __init__.py  gemini_provider.py  llm.py  llm_old.py  llm_service.py  system_prompts.py  tools.py  web_search.py
apps/backend/calendar_backend/src/calendar_backend/: __init__.py
apps/frontend/: NEXTAUTH_SETUP.md  README-T3-SETUP.md  README.md  TOKEN_REFRESH_GUIDE.md  eslint.config.js  package.json  pnpm-lock.yaml  update-schema.md  vercel.json
apps/frontend/prisma/: schema.prisma  seed.ts
apps/frontend/scripts/: fix-db.js  (+2 more)
apps/web/: package.json
(+44 files in other folders)
