[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.11.7",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
