[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "pydantic[email]>=2.11.7",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "httpx>=0.25.0",
    "google-genai>=1.33.0",
    "pytz>=2025.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
